Cambios en modulos

--- a/src/app/pages/modeloswc/actualiza-modelo.component.html
+++ b/src/app/pages/modeloswc/actualiza-modelo.component.html
@@ -181,8 +181,8 @@
                                         <option value="Nequi-Bancolombia">Nequi-Bancolombia</option>
                                         <option value="Super Giros">Super Giros</option>
                                         <option value="Movii S.A.">Movii S.A.</option>
-                                        <option value="RappiPay">Movii S.A.</option>
-                                        <option value="No Aplica">No Aplica</option>
+                                        <option value="RappiPay">RappiPay</option>
+                                        <option value="Efectivo">Efectivo</option>
                                     </select>
                                 </div>
                             </div>
