--- a/src/app/pages/retiros/nuevo-retiro.component.html
+++ b/src/app/pages/retiros/nuevo-retiro.component.html
@@ -10,7 +10,7 @@
                     <div class="row p-t-20">
                         <div class="col-md-6">
                             <div class="form-group">
-                                <label class="control-label label-form-decora">Modelo</label>
+                                <label class="control-label label-form-decora">Nombres y Apellidos de Modelo:</label>
                                 <div class="input-group">
                                     <div class="input-group-addon"><i class="ti-face-smile"></i></div>
                                     <select class="form-control custom-select" id="model" formControlName="modelo">
@@ -23,7 +23,7 @@
 
                         <div class="col-md-6">
                             <div class="form-group">
-                                <label class="control-label label-form-decora">Estado</label>
+                                <label class="control-label label-form-decora">Estado del retiro:</label>
                                 <div class="input-group">
                                     <div class="input-group-addon"><i class="ti-anchor"></i></div>
                                     <input type="text" class="form-control" id="estado" autocomplete="off" formControlName="estado" [readOnly]="true">
@@ -35,7 +35,7 @@
                     <div class="row p-t-20">
                         <div class="col-md-6">
                             <div class="form-group">
-                                <label class="control-label label-form-decora">Motivo Retiro</label>
+                                <label class="control-label label-form-decora">Motivo del Retiro:</label>
                                 <div class="input-group">
                                     <div class="input-group-addon"><i class="ti-comment"></i></div>
                                     <textarea class="form-control text-area" formControlName="motivoRetiro"></textarea>
@@ -45,7 +45,7 @@
 
                         <div class="col-md-6">
                             <div class="form-group">
-                                <label class="control-label label-form-decora">Fecha Renuncia</label>
+                                <label class="control-label label-form-decora">Fecha de Renuncia:</label>
                                 <div class="input-group">
                                     <div class="input-group-addon"><i class="ti-calendar"></i></div>
                                     <input type="date" id="fechaRenuncia" class="form-control" formControlName="fechaRenuncia" placeholder="dd/mm/yyyy" autocomplete="off">
