Se elimina la opcion de cambiar nombre para USER_ROLE y se agregan los modulos de vacunas

--- a/src/app/pages/profile/profile.component.html
+++ b/src/app/pages/profile/profile.component.html
@@ -22,7 +22,7 @@
                         </div>
                     </div>
                     <br>
-                    <button type="submit" class="btn btn-success waves-effect waves-light m-r-10" [disabled]="profileForm.invalid">
+                    <button *ngIf="usuario.role !== 'USER_ROLE'" type="submit" class="btn btn-success waves-effect waves-light m-r-10" [disabled]="profileForm.invalid">
                         <i class="fa fa-save"></i>
                         Guardar
                     </button>
