--- a/src/app/pages/admin/vacunas-codiv19/vacunas-codiv19.component.html
+++ b/src/app/pages/admin/vacunas-codiv19/vacunas-codiv19.component.html
@@ -1,1 +1,91 @@
-<p>vacunas-codiv19 works!</p>
+<div class="row animated fadeIn fast" *ngIf="cargando">
+    <div class="col-12">
+        <div class="alert alert-info text-center">
+            <h4 class="alert-heading">Cargando</h4>
+            <i class="fa fa-spin fa-refresh fa-2x"></i>
+            <p class="mb-0">Por favor espere...</p>
+        </div>
+    </div>
+</div>
+
+<div class="row animated fadeIn fast" *ngIf="!cargando">
+    <div class="col-12">
+        <div class="card">
+            <div class="card-body">
+                <div class="col-12">
+                    <table style="width:100%">
+                        <tr>
+                            <td style="text-align:left">
+                                <button [routerLink]="['/dashboard/nuevoRegVacuna']" type="button" class="btn waves-effect waves-light btn-rounded btn-primary">
+                                <i class="fa fa-user-plus"></i> Crear Registro Vacunado </button>
+                            </td>
+                            <td style="text-align:right">
+                                <h6>Cantidad de registros (<small>{{ totalVacunados }}</small>)</h6>
+                            </td>
+                        </tr>
+                    </table>
+                </div>
+                &nbsp;
+                <div class="table-responsive">
+                    <table class="table table-bordered color-bordered-table inverse-bordered-table">
+                        <thead>
+                            <tr>
+                                <th class="w50"></th>
+                                <th>Documento</th>
+                                <th>Nombres y Apellidos</th>
+                                <th>Correo Electrónico</th>
+                                <th>Tel. Celular</th>
+                                <th>Entidad Bancaria</th>
+                                <th># Cuenta</th>
+                                <th class="text-center">Estado</th>
+                                <th class="text-center">Acción</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr *ngFor="let vacunado of vacunados">
+                                <td class="text-center">
+                                    <img [src]="vacunado.imagenUrl" class="avatar-w40 cursor" alt="Carnet de vacunación" (click)="abrilModalImagen( vacunado )">
+                                </td>
+                                <td><small>{{modelo.tipoDocumento}}-{{modelo.documento}}</small></td>
+                                <td><small><a href="" (click)="verDetallesModelo(modelo)" data-toggle="modal" data-target="#datosModeloModal">{{modelo.nombres}} {{modelo.apellidos}}</a></small></td>
+                                <td><small>{{modelo.emailCorporativo}}</small></td>
+                                <td><small>{{modelo.telCelular}}</small></td>
+                                <td><small>{{modelo.entidadBanco}}</small></td>
+                                <td><small>{{modelo.numCuentaBanco}}</small></td>
+                                <td class="text-center">
+                                    <span *ngIf="modelo.estado" class="label label-success">ACTIVO</span>
+                                    <span *ngIf="!modelo.estado" class="label label-danger">INACTIVO</span>
+                                </td>
+                                <td class="text-nowrap text-center">
+                                    <a [routerLink]="['/dashboard/actualizarModelo', modelo._id]" title="Actualizar Datos de Modelo" data-toggle="tooltip" data-original-title="Actualizar Datos de Modelo">
+                                        <i class="fa fa-pencil text-inverse m-r-10"></i>
+                                    </a>
+                                    &nbsp;
+                                    <a *ngIf="modelo.estado" class="cursor" title="Inactivar Modelo" data-toggle="tooltip" data-original-title="Inactivar Modelo del Sistema" (click)="inactivarModelo(modelo)">
+                                        <i class="fa fa-close text-danger"></i>
+                                    </a>
+
+                                    <a *ngIf="!modelo.estado" class="cursor" title="Reactivar Modelo" data-toggle="tooltip" data-original-title="Reactivar Modelo en el Sistema" (click)="reActivarModelo(modelo)">
+                                        <i class="fa fa-link text-warning"></i>
+                                    </a>
+                                </td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
+
+                <div class="text-center" *ngIf="mostrarBotones">
+                    <button (click)="cambiarPagina(-10)" class="btn btn-secondary">
+                        <i class="fa fa-backward"></i>&nbsp;
+                        Anteriores
+                    </button> &nbsp; &nbsp; &nbsp;
+
+                    <button (click)="cambiarPagina(10)" class="btn btn-secondary">
+                        Siguientes &nbsp;
+                        <i class="fa fa-forward"></i>
+                    </button>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
