Inclusion de elementos de administradores y finaliza el modulo de vacunas

--- a/src/app/components/modal-imagen/modal-imagen.component.html
+++ b/src/app/components/modal-imagen/modal-imagen.component.html
@@ -3,7 +3,7 @@
         <div class="modal-dialog" role="document">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h4 class="modal-title" id="exampleModalLabel1">Cargar Imagen de Avatar</h4>
+                    <h4 class="modal-title" id="exampleModalLabel1">Cargar Imagen</h4>
                     <button type="button" (click)="cerrarModal()" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">×</span></button>
                 </div>
                 <div class="modal-body">
